# WeDPR-Component

./: .gitignore
.github/workflows/: cpp_full_node_workflow.yml  cpp_sdk_workflow.yml  cpp_toolkit_workflow.yml  cpp_workflow.yml  docker.yml  release_full_node.yml  vcpkg_docker_image.yml
cpp/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
cpp/cmake/: CompilerSettings.cmake  Dependencies.cmake  IncludeDirectories.cmake  Options.cmake  TargetSettings.cmake
cpp/ppc-framework/: Common.h
cpp/ppc-framework/front/: IFront.h  INodeDiscovery.h
cpp/ppc-framework/gateway/: IGateway.h
cpp/ppc-framework/io/: DataBatch.h
cpp/ppc-framework/protocol/: GrpcConfig.h  INodeInfo.h  Krb5AuthConfig.h  Message.h  PPCMessageFace.h
cpp/ppc-front/ppc-front/: FrontImpl.h
cpp/ppc-gateway/: CMakeLists.txt
cpp/ppc-gateway/ppc-gateway/: GatewayFactory.cpp
cpp/ppc-pb-protocol/: CMakeLists.txt
cpp/ppc-pb-protocol/src/: Common.h
cpp/ppc-pb-protocol/src/impl/: NodeInfoImpl.cpp  NodeInfoImpl.h
cpp/ppc-pir/src/: OtPIRImpl.cpp
cpp/ppc-tars-protocol/: CMakeLists.txt
cpp/ppc-tars-protocol/ppc-tars-protocol/: Common.h
cpp/tools/: build_ppc.sh  build_wedpr_cem.sh  build_wedpr_mpc.sh  install_depends.sh
cpp/wedpr-helper/libhelper/: CommandHelper.cpp  CommandHelper.h
cpp/wedpr-helper/ppc-utilities/: Utilities.h
cpp/wedpr-initializer/: Initializer.cpp
cpp/wedpr-main/: CMakeLists.txt
cpp/wedpr-main/air-node/: AirNodeInitializer.cpp  (+1 more)
docker-files/cpp/: Dockerfile
python/: requirements.txt
python/ppc_model/: ppc_model_app.py
python/wedpr_ml_toolkit/: setup.py
(+151 files in other folders)
